--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_edit_profile.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_edit_profile.xml
@@ -12,7 +12,7 @@
         android:id="@+id/frameLayoutEditProfile"
         android:layout_width="415dp"
         android:layout_height="70dp"
-        android:background="@color/blue_light_neon"
+        android:background="@color/appColorRoxo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -183,7 +183,7 @@
         android:id="@+id/btnUpdate"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:backgroundTint="@color/blue_light_neon"
+        android:backgroundTint="@color/appColorRoxo"
         android:fontFamily="@font/poppins_semibold"
         android:text="@string/appBtnAtualizar"
         android:textColor="@color/appColorBranco"
