--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_login.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:id="@+id/frameLayoutLogin"
         android:layout_width="415dp"
         android:layout_height="70dp"
-        android:background="@color/blue_light_neon"
+        android:background="@color/appColorRoxo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -43,7 +43,7 @@
                 android:fontFamily="@font/poppins_semibold"
                 android:text="@string/appTituloLogin"
                 android:textAlignment="center"
-                android:textColor="@color/appColorPreto"
+                android:textColor="@color/appColorBranco"
                 android:textSize="24sp"
                 android:paddingTop="3dp"
                 android:textStyle="bold" />
@@ -121,7 +121,7 @@
         android:layout_marginBottom="364dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="@string/appTextCrieConta"
-        android:textColor="@color/blue_light_neon"
+        android:textColor="@color/appColorRoxo"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -134,7 +134,7 @@
         android:id="@+id/btnLogar"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:backgroundTint="@color/blue_light_neon"
+        android:backgroundTint="@color/appColorRoxo"
         android:fontFamily="@font/poppins_semibold"
         android:text="@string/appBtnEntrar"
         android:textColor="@color/appColorBranco"
