--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_register.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_register.xml
@@ -12,7 +12,7 @@
         android:id="@+id/frameLayoutRegister"
         android:layout_width="415dp"
         android:layout_height="70dp"
-        android:background="@color/blue_light_neon"
+        android:background="@color/appColorRoxo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -43,7 +43,7 @@
                 android:fontFamily="@font/poppins_semibold"
                 android:text="@string/appTituloRegister"
                 android:textAlignment="center"
-                android:textColor="@color/appColorPreto"
+                android:textColor="@color/appColorBranco"
                 android:textSize="24sp"
                 android:paddingTop="3dp"
                 android:textStyle="bold" />
@@ -245,7 +245,7 @@
         android:id="@+id/btnRegister"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:backgroundTint="@color/blue_light_neon"
+        android:backgroundTint="@color/appColorRoxo"
         android:fontFamily="@font/poppins_semibold"
         android:text="@string/appBtnCadastrar"
         android:textColor="@color/appColorBranco"
