--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/drawable/frame_arredondar_baixo.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/drawable/frame_arredondar_baixo.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/blue_light_neon" />
+    <solid android:color="@color/appColorRoxo" />
     <corners
         android:topLeftRadius="0dp"
         android:topRightRadius="0dp"
