--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/drawable/input_background.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/drawable/input_background.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/input_focused" android:state_focused="true"/>
-    <item android:drawable="@drawable/input_default"/>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@color/appColorRoxoClaro" />
+    <corners android:radius="10dp"/>
+    <stroke android:width="2dp" android:color="@color/appColorRoxoClaroSolido"/>
+</shape>
