--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_extract.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_extract.xml
@@ -12,7 +12,7 @@
         android:id="@+id/frameLayoutPix"
         android:layout_width="0dp"
         android:layout_height="70dp"
-        android:background="@color/blue_light_neon"
+        android:background="@color/appColorRoxo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -62,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/appMascaraValor"
-        android:textColor="@color/blue_light_neon"
+        android:textColor="@color/appColorRoxo"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/textSaldoLabel"
