--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_home.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_home.xml
@@ -95,7 +95,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:text="@string/appTituloPix"
-                    android:textColor="@color/blue_neon"
+                    android:textColor="@color/appColorRoxo"
                     android:textSize="10sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -128,7 +128,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:text="@string/appTituloExtrato"
-                    android:textColor="@color/blue_neon"
+                    android:textColor="@color/appColorRoxo"
                     android:textSize="10sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -160,7 +160,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:text="@string/appTituloPontos"
-                    android:textColor="@color/blue_neon"
+                    android:textColor="@color/appColorRoxo"
                     android:textSize="10sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -225,7 +225,7 @@
                     android:layout_height="wrap_content"
                     android:backgroundTint="@android:color/white"
                     android:text="@string/appBtnResgatarPontos"
-                    android:textColor="@color/blue_neon"
+                    android:textColor="@color/appColorRoxo"
                     android:textStyle="bold" />
             </LinearLayout>
 
