--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_pix_transfer.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_pix_transfer.xml
@@ -12,7 +12,7 @@
         android:id="@+id/frameLayoutPix"
         android:layout_width="0dp"
         android:layout_height="70dp"
-        android:background="@color/blue_light_neon"
+        android:background="@color/appColorRoxo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -122,7 +122,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_margin="24dp"
-        android:backgroundTint="@color/blue_light_neon"
+        android:backgroundTint="@color/appColorRoxo"
         android:onClick="confirmar"
         android:text="@string/appBtnConfirmar"
         android:textColor="@color/appColorBranco"
