--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_pix_transfer_receipt.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_pix_transfer_receipt.xml
@@ -12,7 +12,7 @@
         android:id="@+id/frameLayoutPix"
         android:layout_width="0dp"
         android:layout_height="70dp"
-        android:background="@color/blue_light_neon"
+        android:background="@color/appColorRoxo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -118,7 +118,7 @@
         android:text="@string/appbtnCompartilhar"
         android:textSize="16sp"
         android:textColor="@color/appColorBranco"
-        android:backgroundTint="@color/blue_light_neon"
+        android:backgroundTint="@color/appColorRoxo"
         app:layout_constraintTop_toBottomOf="@id/layoutDestinatario"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
