--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_edit_profile.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_edit_profile.xml
@@ -41,11 +41,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_semibold"
+                android:paddingTop="3dp"
                 android:text="@string/appTituloEditProfile"
                 android:textAlignment="center"
-                android:textColor="@color/appColorPreto"
+                android:textColor="@color/appColorBranco"
                 android:textSize="24sp"
-                android:paddingTop="3dp"
                 android:textStyle="bold" />
         </LinearLayout>
     </FrameLayout>
