Atualizando titulo para cor preta

--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_pix_home.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_pix_home.xml
@@ -65,6 +65,7 @@
         android:text="@string/appTituloEnviar"
         android:textStyle="bold"
         android:textSize="20sp"
+        android:textColor="@color/appColorPreto"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/poppins_semibold"
         app:layout_constraintTop_toBottomOf="@id/txtSubtitulo"
@@ -118,6 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/appTituloReceber"
+        android:textColor="@color/appColorPreto"
         android:textStyle="bold"
         android:textSize="20sp"
         android:layout_marginTop="24dp"
