--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_home.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_home.xml
@@ -47,6 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/appTituloVerExtrato"
+        android:onClick="abrirTelaExtrato"
         android:textColor="@color/appColorBranco"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -56,20 +57,20 @@
 
     <LinearLayout
         android:id="@+id/layout_botoes"
-        android:layout_width="382dp"
+        android:layout_width="wrap_content"
         android:layout_height="70dp"
         android:layout_marginTop="16dp"
         android:gravity="left"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.296"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtVerExtrato">
 
         <FrameLayout
             android:id="@+id/btnPix"
-            android:layout_width="60dp"
-            android:layout_height="63dp"
+            android:layout_width="64dp"
+            android:layout_height="65dp"
             android:layout_margin="8dp"
             android:background="@drawable/fundo_botao_padrao"
             android:clickable="true"
@@ -87,7 +88,7 @@
                     android:id="@+id/imgPix"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:src="@drawable/logo_pix" />
+                    android:src="@drawable/ic_pix" />
 
                 <TextView
                     android:id="@+id/txtPix"
@@ -103,11 +104,11 @@
 
         <FrameLayout
             android:id="@+id/btnExtrato"
-            android:layout_width="60dp"
-            android:layout_height="63dp"
+            android:layout_width="64dp"
+            android:layout_height="65dp"
             android:layout_margin="8dp"
-            android:onClick="abrirTelaExtrato"
             android:background="@drawable/fundo_botao_padrao"
+            android:onClick="abrirTelaExtrato"
             android:padding="8dp">
 
             <LinearLayout
@@ -120,7 +121,7 @@
                     android:id="@+id/imgExtrato"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:src="@drawable/ic_estrato" />
+                    android:src="@drawable/ic_extrato" />
 
                 <TextView
                     android:id="@+id/txtExtrato"
@@ -136,8 +137,8 @@
 
         <FrameLayout
             android:id="@+id/btnPontos"
-            android:layout_width="60dp"
-            android:layout_height="63dp"
+            android:layout_width="64dp"
+            android:layout_height="65dp"
             android:layout_margin="8dp"
             android:background="@drawable/fundo_botao_padrao"
             android:padding="8dp">
@@ -160,6 +161,38 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:text="@string/appTituloPontos"
+                    android:textColor="@color/appColorRoxo"
+                    android:textSize="10sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/btnServicos"
+            android:layout_width="64dp"
+            android:layout_height="65dp"
+            android:layout_margin="8dp"
+            android:background="@drawable/fundo_botao_padrao"
+            android:padding="8dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imgServicos"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:src="@drawable/ic_servico" />
+
+                <TextView
+                    android:id="@+id/txtServicos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:text="SERVIÇOS"
                     android:textColor="@color/appColorRoxo"
                     android:textSize="10sp"
                     android:textStyle="bold" />
