--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_welcome.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_welcome.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.684"
-        app:srcCompat="@drawable/cartao1" />
+        app:srcCompat="@drawable/img_cartao" />
 
     <ImageView
         android:id="@+id/imgLogo"
