--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_asa_service_receipt.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_asa_service_receipt.xml
@@ -74,7 +74,7 @@
             android:id="@+id/txtStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/appTxtStatus"
+            android:text="Pagamento realizado com sucesso"
             android:textSize="16sp"
             android:textColor="@color/appColorCinzaEscuro" />
 
