--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_home.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_home.xml
@@ -140,6 +140,7 @@
             android:layout_width="64dp"
             android:layout_height="65dp"
             android:layout_margin="8dp"
+            android:onClick="abrirTelaPontos"
             android:background="@drawable/fundo_botao_padrao"
             android:padding="8dp">
 
