--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_home.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_home.xml
@@ -19,6 +19,22 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
+        android:id="@+id/txtNomeUsuario"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:text="@string/appMascaraNome"
+        android:textColor="@color/appColorBranco"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/txtSaldoDisponivel"
+        app:layout_constraintEnd_toStartOf="@+id/imgUsuario"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
+
+    <TextView
         android:id="@+id/txtSaldoDisponivel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,7 +52,7 @@
         android:layout_height="wrap_content"
         android:text="@string/appMascaraValor"
         android:textColor="@color/appColorBranco"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:layout_marginTop="4dp"
         app:layout_constraintTop_toBottomOf="@id/txtSaldoDisponivel"
@@ -260,6 +276,7 @@
                     android:layout_height="wrap_content"
                     android:backgroundTint="@android:color/white"
                     android:text="@string/appBtnResgatarPontos"
+                    android:onClick="abrirTelaPontos"
                     android:textColor="@color/appColorRoxo"
                     android:textStyle="bold" />
             </LinearLayout>
