--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_edit_profile.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_edit_profile.xml
@@ -196,6 +196,22 @@
         app:layout_constraintVertical_bias="0.136" />
 
     <Button
+        android:id="@+id/btnLogout"
+        android:layout_width="360dp"
+        android:layout_height="50dp"
+        android:backgroundTint="@color/appColorRoxoClaroSolido"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="@string/appBtnSairConta"
+        android:textColor="@color/appColorBranco"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnUpdate"
+        app:layout_constraintVertical_bias="0.1" />
+
+    <Button
         android:id="@+id/btnDelete"
         android:layout_width="360dp"
         android:layout_height="50dp"
@@ -206,10 +222,9 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.549"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnUpdate"
-        app:layout_constraintVertical_bias="0.136" />
-
+        app:layout_constraintTop_toBottomOf="@+id/btnLogout"
+        app:layout_constraintVertical_bias="0.611" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
