--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_extract.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_extract.xml
@@ -102,7 +102,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textMes"
+        android:id="@+id/txtMes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/appTituloMes"
@@ -118,7 +118,7 @@
         android:id="@+id/recyclerExtrato"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/textMes"
+        app:layout_constraintTop_toBottomOf="@id/txtMes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
